ViTables ChangeLog
==================
** October 01, 2013**
Checking modules directly under the vitables package with pylint.

The package docbrowser has been analyzed with pylint.

The package h5db has been analyzed with pylint.

The package nodeprops has been analyzed with pylint.

** September 30, 2013 **
The modules vtSite and vtGUI hav been renamed accordingly to PEP 8.

** September 29, 2013 **
The module dataSheet has been renamed accordingly to PEP 8.

The module scrollBar has been renamed accordingly to PEP 8.

The module leafView has been renamed accordingly to PEP 8.

The module leafModel has been renamed accordingly to PEP 8.

The module leafDelegate has been renamed accordingly to PEP 8.

The modules aboutPage have been renamed accordingly to PEP 8.

The modules aboutPage has been renamed accordingly to PEP 8.

The module configIOException has been renamed accordingly to PEP 8.

Some minor changes done.

Some changes that should have been added 2 commits ago :-(

Modules queriesManager and queryDlg have been renamed accordingly to PEP 8.

Modules in the nodeprops package have been renamed accordingly to PEP 8.

Modules in the h5db package have been renamed accordingly to PEP 8.

Modules in the docBrowser package have been renamed accordingly to PEP 8.

** September 28, 2013 **
The package vtWidgets has been renamed accordingly to PEP 8.

The package vtTables has been renamed accordingly to PEP 8.

The package nodeProperties has been renamed accordingly to PEP 8.

The package docBrowser has been renamed accordingly to PEP 8.

The module zoomCell has been renamed accordingly to PEP 8.

The module inputNodeName has been renamed accordingly to PEP 8.

** September 20, 2013 **
data presentation of EArray has been debugged and simplified.

** September 16, 2013 **
Fixed a bug in the cut node operation.

The example scripts have been migrated to PyTables3 syntax with pt2to3.

** September 03, 2013 **
Bug #22 has been fixed.
